Fix navbar overflowing container bug

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,14 +1,32 @@
+@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great');
+
+
 body{
     background-color: black;
     color: white;
+    font-family: 'Fredericka the Great', cursive;
+    letter-spacing: 0.1vw;
+
+    
 }
+
+h3{
+    text-align: center;
+}
+
 
 #container{
     margin-top: 4%;
     height: 40%;
-    width: 60%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
+    position: relative;
+    
+}
+
+.container__box{
     text-align: center;
 }
 
@@ -16,10 +34,11 @@ body{
     width: 100%;
     height: 2%;
     text-align: center;
+    overflow:auto;
 }
 
 .timeCounter{
-    color: rgb(146, 144, 144);
+    color: rgb(129, 129, 129);
 }
 
 .navbar__cell{
@@ -37,7 +56,7 @@ body{
 }
 
 #category{
-    color: rgb(48, 48, 48);
+    color: rgb(90, 90, 90);
 }
 
 h2{
@@ -66,7 +85,7 @@ h2{
     min-width: 30px;
     margin: 0.5vw;
     text-align: center;
-    border: 1px solid white;
+    border: 1px solid rgb(170, 170, 170);
     font-size: x-large;
 }
 
